examples/test/testpolicy8193.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8193
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key0: value7
      key9: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value34
      podSelector:
        matchLabels:
          key0: value43
          key42: value8
          key29: value38
